feat: handle fogor and reset password
